--- a/src/app/Components/userform/userform.component.html
+++ b/src/app/Components/userform/userform.component.html
@@ -12,6 +12,19 @@
   </div>
 
   <br/>
+  <div class="form-check">
+    <input class="form-check-input" [(ngModel)]="user.Gender" value="Male" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+    <label class="form-check-label" for="flexRadioDefault1">
+   Male
+    </label>
+  </div>
+  <div class="form-check">
+    <input class="form-check-input" type="radio" [(ngModel)]="user.Gender" value="Female"  name="flexRadioDefault" id="flexRadioDefault2" checked>
+    <label class="form-check-label" for="flexRadioDefault2">
+     Female
+    </label>
+  </div>
+  <br/>
 
   <button type="button" (click)="save()" class="btn btn-secondary btn-lg">Submit</button>
 
