--- a/src/app/Components/userform/userform.component.html
+++ b/src/app/Components/userform/userform.component.html
@@ -1,31 +1,69 @@
+<div class="input-group mb-3">
+  <span class="input-group-text" id="inputGroup-sizing-default"
+    >Enter your name</span
+  >
+  <input
+    type="text"
+    [(ngModel)]="user.name"
+    placeholder="enter your name"
+    class="form-control"
+    aria-label="Sizing example input"
+    aria-describedby="inputGroup-sizing-default"
+  />
+</div>
 
-<div class="input-group mb-3" >
-    <span class="input-group-text" id="inputGroup-sizing-default">Enter your name</span>
-    <input type="text"  [(ngModel)]="user.name"  placeholder="enter your name" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-  </div>
+<br />
 
-  <br/>
+<div class="input-group mb-3">
+  <span class="input-group-text" id="inputGroup-sizing-default"
+    >Enter your Age</span
+  >
+  <input
+    [(ngModel)]="user.age"
+    placeholder="enter your age"
+    type="text"
+    class="form-control"
+    aria-label="Sizing example input"
+    aria-describedby="inputGroup-sizing-default"
+  />
+</div>
 
-  <div class="input-group mb-3" >
-    <span class="input-group-text" id="inputGroup-sizing-default">Enter your Age</span>
-    <input [(ngModel)]="user.age" placeholder="enter your age" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-  </div>
+<br />
+<div class="form-check">
+  <input
+    class="form-check-input"
+    [(ngModel)]="user.Gender"
+    value="Male"
+    type="radio"
+    name="flexRadioDefault"
+    id="flexRadioDefault1"
+  />
+  <label class="form-check-label" for="flexRadioDefault1"> Male </label>
+</div>
+<div class="form-check">
+  <input
+    class="form-check-input"
+    type="radio"
+    [(ngModel)]="user.Gender"
+    value="Female"
+    name="flexRadioDefault"
+    id="flexRadioDefault2"
+    checked
+  />
+  <label class="form-check-label" for="flexRadioDefault2"> Female </label>
+</div>
+<br />
 
-  <br/>
-  <div class="form-check">
-    <input class="form-check-input" [(ngModel)]="user.Gender" value="Male" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-    <label class="form-check-label" for="flexRadioDefault1">
-   Male
-    </label>
-  </div>
-  <div class="form-check">
-    <input class="form-check-input" type="radio" [(ngModel)]="user.Gender" value="Female"  name="flexRadioDefault" id="flexRadioDefault2" checked>
-    <label class="form-check-label" for="flexRadioDefault2">
-     Female
-    </label>
-  </div>
-  <br/>
+<button type="button" (click)="save()" class="btn btn-secondary btn-lg">
+  Submit
+</button>
 
-  <button type="button" (click)="save()" class="btn btn-secondary btn-lg">Submit</button>
+<br />
 
-  
+<ol class="list-group list-group-numbered">
+  <li class="list-group-item" *ngFor="let u of users; index as i">
+    <span> User's name is : {{ u.name }}</span>
+    <br/>
+    <span>User's age is : {{ u.age }}</span>
+  </li>
+</ol>
