--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <app-navbar>
 
 </app-navbar>
-<app-user></app-user>
+<app-about></app-about>
+<!-- <app-user></app-user> -->
 
 <!-- <h3>this training is conducted by </h3>
 <h2>{{name}}</h2>
