--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
+<app-navbar></app-navbar>
+<!-- <app-about></app-about> -->
 
-<app-navbar>
-
-</app-navbar>
-<app-about></app-about>
+<router-outlet></router-outlet>
 <!-- <app-user></app-user> -->
 
 <!-- <h3>this training is conducted by </h3>
