--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -7,9 +7,10 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Registration Form</a></li>
+        <li class="nav-item"><a routerLink="/" href="#" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item"><a  routerLink="/about" href="#" class="nav-link">About</a></li>
+        <li class="nav-item"><a  routerLink="/register" href="#" class="nav-link">Registration Form</a></li>
+        <li class="nav-item"><a  routerLink="/counter" href="#" class="nav-link">Counter</a></li>
       </ul>
     </header>
   </div>
