added valid form component did vallidations

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -11,6 +11,7 @@
         <li class="nav-item"><a  routerLink="/about" href="#" class="nav-link">About</a></li>
         <li class="nav-item"><a  routerLink="/register" href="#" class="nav-link">Registration Form</a></li>
         <li class="nav-item"><a  routerLink="/counter" href="#" class="nav-link">Counter</a></li>
+        <li class="nav-item"><a  routerLink="/valid" href="#" class="nav-link">validform</a></li>
       </ul>
     </header>
   </div>
